[package]
name = "remarkable-ipp"
version = "0.0.1"
edition = "2021"
description = "Make the Remarkable into a printer server"


[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5"
uuid = { version = "1.7.0", features = ["v4"] }
num-traits = "0.2"
num-derive = "0.4"

[profile.release-with-debug]
inherits = "release"
debug = true